studyinfo.client.controller updated to 'GET' groups from the database

--- a/public/views/studyinfo.client.view.html
+++ b/public/views/studyinfo.client.view.html
@@ -16,52 +16,10 @@
             <table class="table table-striped">
                 <thead><tr><th>Groups</th><th>Complience</th></tr></thead>
                 <tbody>
-                    <tr ng-repeat="group in groups"><td><button style="background:transparent">{{group.name}}</button></td><td>{{group.complience}}</td></tr>
-                    <tr><td><button class="btn" style="background:transparent"><a href="/study-group">Group 1</a></button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 2</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 3</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 4</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 5</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 6</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 7</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 8</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 9</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 1</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 2</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 3</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 4</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 5</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 6</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 7</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 8</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 9</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 1</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 2</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 3</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 4</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 5</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 6</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 7</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 8</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 9</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 1</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 2</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 3</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 4</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 5</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 6</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 7</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 8</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 9</button></td><td style="vertical-align:middle" >95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 1</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 2</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 3</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 4</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 5</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 6</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 7</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 8</button></td><td style="vertical-align:middle">95%</td></tr>
-                    <tr><td><button class="btn" style="background:transparent">Group 9</button></td><td style="vertical-align:middle">95%</td></tr>
+                    <tr ng-repeat="group in groups">
+                        <td><button class="btn" style="background:transparent"><a href="/study-group">{{group}}</a></button></td>
+                        <td>{{group.complience}}</td>
+                    </tr>
                 </tbody>
             </table>
         </div> 
