--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -17,6 +17,7 @@ div#scripts
 
     //Application Services
     script(type='text/javascript', src='/js/services/authentication.js')
+    script(type='text/javascript', src='/js/services/AppState.js')
 
     //Application Controllers
     script(type='text/javascript', src='/js/controllers/header.js')
