added Current state factory

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -17,7 +17,7 @@ div#scripts
 
     //Application Services
     script(type='text/javascript', src='/js/services/authentication.js')
-    script(type='text/javascript', src='/js/services/AppState.js')
+    script(type='text/javascript', src='/js/services/Current.js')
 
     //Application Controllers
     script(type='text/javascript', src='/js/controllers/header.js')
