--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,13 +1,14 @@
 
 <section data-ng-controller="HomeController" class="content">
   <div class="row">
-    <div class="well col-md-8 col-sm-8 col-xs-8 col-lg-8 col-sm-offset-2 col-xs-offset-2 col-md-offset-2 col-lg-offset-2"> 
-      <button ng-repeat="study in studies" ui-sref="study-info" class="btn btn-default btn-block">{{study.name}}</button>
-    </div>
+    <h4>Current Values</h4>
+    <ul ng-repeat="(key,value) in states">
+      <li>Current {{key}} : {{value}}</li>
+    </ul>
   </div>
   <div class="row">
-    <ul>
-      <li>Current Study: {{AppState.current_study}}</li>
-    </ul>
+    <h4>Set Values</h4>
+    <input type="text" name="newStudy" ng-model="newStudy"/>
+    <button ng-click="Current.set_study(newStudy)" class="btn btn-default">Set Current Study</button>
   </div>
 </section>
