--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -36,6 +36,7 @@ div#scripts
     script(type='text/javascript', src='/js/controllers/subjectselect.client.controller.js')
     script(type='text/javascript', src='/js/controllers/subjectSetupController.js')
     script(type='text/javascript', src='/js/controllers/subject_search.js')
+    <script type="text/javascript" src="/js/controllers/angular-fusioncharts.min.js"></script>
 
     if (process.env.NODE_ENV == 'development')
         //Livereload script rendered 
