--- a/public/views/subject.status.client.view.html
+++ b/public/views/subject.status.client.view.html
@@ -23,31 +23,11 @@
     	</thead>
     	<tbody>
     		<tr ng-repeat="subject in subjects">
-    			<td><button class="btn" style="background:transparent" ui-sref="subject-info">{{subject.id}}</button></td>
-    			<td>{{subject.reader_id}}</td>
-    			<td>{{subject.group}}</td>
-    			<td>{{subject.status}}</td>
+    			<td><button class="btn" style="background:transparent" ui-sref="subject-info">{{subject.subjectID}}</button></td>
+    			<td>{{subject.readerID}}</td>
+    			<td>{{subject.studyGroupName}}</td>
+    			<td>{{subject.undefined}}</td>
     		</tr>
-   <!--Sample Data-->
-   		<tr>
-   			<td><button class="btn" style="background:transparent" ui-sref="subject-info">12345</button></td>
-   			<td>435235</td>
-   			<td>Group 1</td>
-   			<td>Incomplete</td>
-   		</tr>
-   		<tr>
-   			<td><button class="btn" style="background:transparent" ui-sref="subject-info">12765</button></td>
-   			<td>435236</td>
-   			<td>Control</td>
-   			<td>Complete</td>
-   		</tr>
-   		<tr>
-   			<td><button class="btn" style="background:transparent" ui-sref="subject-info">12370</button></td>
-   			<td>435230</td>
-   			<td>Group 1</td>
-   			<td>Unverified</td>
-   		</tr>
-   <!-------->
     	</tbody>
     </table>
   </div>
