Figured out state.go won't refresh current page

--- a/public/views/subject-register.html
+++ b/public/views/subject-register.html
@@ -250,7 +250,7 @@
         </div>
         <div align="center" class="container">
           <input class="btn btn-default" type="submit" ng-click="submit()" value="Enroll Subject" />
-          <a class="btn btn-default" role="button" href="#" ng-click="cancel()">Cancel</a>
+          <a class="btn btn-default" role="button" ng-click="cancel()">Cancel</a>
         </div>
       </form><br><br>
     </div>
