--- a/public/views/groupinfo.client.view.html
+++ b/public/views/groupinfo.client.view.html
@@ -18,7 +18,7 @@
                 <thead><tr><th>Patients</th><th>Complience</th></tr></thead>
                 <tbody>
                     <tr ng-repeat="patient in patients">
-                        <td><button class="btn" style="background:transparent"><a href="/subject-info">{{patient.subjectID}}</a></button></td>
+                        <td><button class="btn" style="background:transparent" ng-click="Current.set_patient(patient.subjectID, patient.firstname, patient.lastname)" ui-sref="subject-info">{{patient.subjectID}}</a></button></td>
                         <td style="vertical-align:middle">{{patient.complience}}</td>
                     </tr>
                 </tbody>
