--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,11 +1,9 @@
 
 <section data-ng-controller="HomeController" class="content">
   <div class="row">
-      <div class="well col-md-8 col-sm-8 col-xs-8 col-lg-8 col-sm-offset-2 col-xs-offset-2 col-md-offset-2 col-lg-offset-2">
-          <button ng-repeat="study in studies" class="btn btn-default btn-block" ui-sref="study-info">
-              {{study.studyName}}
-          </button>
-      </div>
+    <div class="well col-md-8 col-sm-8 col-xs-8 col-lg-8 col-sm-offset-2 col-xs-offset-2 col-md-offset-2 col-lg-offset-2">
+      <button ng-repeat="study in studies" ng-click="Current.set_study(study.studyID, study.studyName)" ui-sref="study-info" class="btn btn-default btn-block">{{study.studyName}}</button>
+    </div>
   </div>
   <div class="row">
     <h4>Current Values</h4>
